// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Modal/ModalFooter AvecContenuOptionnel smoke-test 1`] = `
<div class="mt-4">
  <p>
    Contenu optionnel
  </p>
  <div class="flex gap-4 flex-wrap justify-end">
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      Cancel
    </button>
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      OK
    </button>
  </div>
</div>
`;

exports[`design-system/Modal/ModalFooter Center smoke-test 1`] = `
<div class="mt-4">
  <div class="flex gap-4 flex-wrap justify-center">
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      OK
    </button>
  </div>
</div>
`;

exports[`design-system/Modal/ModalFooter Default smoke-test 1`] = `
<div class="mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      Cancel
    </button>
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      OK
    </button>
  </div>
</div>
`;

exports[`design-system/Modal/ModalFooter Space smoke-test 1`] = `
<div class="mt-4">
  <div class="flex gap-4 flex-wrap justify-between">
    <div class="flex gap-4 flex-wrap">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
        Non pertinent
      </button>
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
        En cours
      </button>
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
        Réalisé
      </button>
    </div>
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      <span class="ri-file-add-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      Ajouter
    </button>
  </div>
</div>
`;
